# shieldUAV

./: README.md
01_uC_MSP430G2553_code/: blink.c
01_uC_MSP430G2553_code/Debug/: TestuLuiPeste.map  TestuLuiPeste.out  TestuLuiPeste_linkInfo.xml  blink.d  makefile  subdir_rules.mk  subdir_vars.mk
02_LabWindowsCVI_code/: serial.c  serial.cws  serial.h  serial.prj  serial.uir
02_LabWindowsCVI_code/cvibuild.serial/Debug/: CC_no_dep_options.txt  CallCC.bat  Jamfile  Jamfile_instr  link_options.txt  linkersummary.txt  resources.in.rc  resources.res  (+1 more)
03_IO_system/: mctrl_comm.py
04_object_tracking/: mctrl_comm.py  object_tracking.py
04_object_tracking/tools/: object_center.py  pid.py
05_img_ACQ/: imgAcq.py
06_YOLO_conversion_to_DPU/: compiling_Model.sh  inspection_Model.py
07_YOLO_conversion_to_DPU/: quantizing_Model.py
08_YOLOv3-7_UAV_plane/: tracking.py
08_YOLOv3-7_UAV_plane/tools/: object_center.py
08_YOLOv3-tyny_UAV_plane/: tracking.py  yolov7_leaky_UAV_anchors.txt
08_YOLOv3-tyny_UAV_plane/tools/: object_center.py
09_offboard_velocity/: package.xml  setup.cfg  setup.py
09_offboard_velocity/offboard_velocity/: velocity_AMD_AIcontest.py  velocity_AMD_AIcontest_old.py
10_offboard_position/: package.xml  setup.cfg  setup.py
10_offboard_position/offboard_position/: position_AMD_AIcontest.py  position_AMD_AIcontest_old.py
11_kamikaze_uav/: package.xml  setup.cfg  setup.py
11_kamikaze_uav/kamikaze_uav/: broadcast.py  control.py  detection.py  velocity.py  video.py  voc_classes.txt
11_kamikaze_uav/launch/: python_parameters_launch.py
(+2 files in other folders)
